--- a/mytest/templates/mytest/blog_list.html
+++ b/mytest/templates/mytest/blog_list.html
@@ -7,7 +7,14 @@
 </head>
 
 <body>
-    hello
+    <h1>My First Blog</h1>
+    <p><em></em></p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. At natus tempore, ullam voluptate explicabo officiis deserunt minima blanditiis quidem voluptates dolore, nesciunt doloremque debitis, eos ducimus maiores cupiditate! Optio tempora consequatur enim, officia dolore.</p>
+    <script>
+    let em = document.querySelector('em');
+    time = Date();
+    em.innerHTML = time;
+    </script>
 </body>
 
 </html>
