--- a/mytest/static/mytest/style.css
+++ b/mytest/static/mytest/style.css
@@ -13,6 +13,7 @@
 
 .header_logo h1 {
     color: blue;
+    padding: 20px;
 }
 
 .menu {
@@ -52,14 +53,6 @@
     font-family: monospace;
     font-size: 12px;
     color: #888;
-}
-
-hr {
-    background: darkred;
-    border: none;
-    height: 2px;
-    width: 400px;
-    margin: 2px auto;
 }
 
 section {
